--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -463,63 +463,63 @@
         const ctx = canvas.getContext('2d');
 
         const boardImg = new Image();
-        boardImg.src = '/static/board.png';
+        boardImg.src = '/static/board.png?t=' + Date.now();
 
         const blackImg = new Image();
-        blackImg.src = '/static/black_checker.png';
+        blackImg.src = '/static/black_checker.png?t=' + Date.now();
 
         const whiteImg = new Image();
-        whiteImg.src = '/static/white_checker.png';
+        whiteImg.src = '/static/white_checker.png?t=' + Date.now();
 
         const Dice1w = new Image();
-        Dice1w.src = '/static/1w.png';
+        Dice1w.src = '/static/1w.png?t=' + Date.now();
         const Dice2w = new Image();
-        Dice2w.src = '/static/2w.png';
+        Dice2w.src = '/static/2w.png?t=' + Date.now();
         const Dice3w = new Image();
-        Dice3w.src = '/static/3w.png';
+        Dice3w.src = '/static/3w.png?t=' + Date.now();
         const Dice4w = new Image();
-        Dice4w.src = '/static/4w.png';
+        Dice4w.src = '/static/4w.png?t=' + Date.now();
         const Dice5w = new Image();
-        Dice5w.src = '/static/5w.png';
+        Dice5w.src = '/static/5w.png?t=' + Date.now();
         const Dice6w = new Image();
-        Dice6w.src = '/static/6w.png';
+        Dice6w.src = '/static/6w.png?t=' + Date.now();
 
         const Dice1b = new Image();
-        Dice1b.src = '/static/1b.png';
+        Dice1b.src = '/static/1b.png?t=' + Date.now();
         const Dice2b = new Image();
-        Dice2b.src = '/static/2b.png';
+        Dice2b.src = '/static/2b.png?t=' + Date.now();
         const Dice3b = new Image();
-        Dice3b.src = '/static/3b.png';
+        Dice3b.src = '/static/3b.png?t=' + Date.now();
         const Dice4b = new Image();
-        Dice4b.src = '/static/4b.png';
+        Dice4b.src = '/static/4b.png?t=' + Date.now();
         const Dice5b = new Image();
-        Dice5b.src = '/static/5b.png';
+        Dice5b.src = '/static/5b.png?t=' + Date.now();
         const Dice6b = new Image();
-        Dice6b.src = '/static/6b.png';
+        Dice6b.src = '/static/6b.png?t=' + Date.now();
 
         const Double2 = new Image();
-        Double2.src = '/static/Double2.png';
+        Double2.src = '/static/Double2.png?t=' + Date.now();
         const Double4 = new Image();
-        Double4.src = '/static/Double4.png';
+        Double4.src = '/static/Double4.png?t=' + Date.now();
         const Double8 = new Image();
-        Double8.src = '/static/Double8.png';
+        Double8.src = '/static/Double8.png?t=' + Date.now();
         const Double16 = new Image();
-        Double16.src = '/static/Double16.png';
+        Double16.src = '/static/Double16.png?t=' + Date.now();
         const Double32 = new Image();
-        Double32.src = '/static/Double32.png';
+        Double32.src = '/static/Double32.png?t=' + Date.now();
         const Double64 = new Image();
-        Double64.src = '/static/Double64.png';
+        Double64.src = '/static/Double64.png?t=' + Date.now();
 
         const Left = new Image();
-        Left.src = '/static/left.png';
+        Left.src = '/static/left.png?t=' + Date.now();
         const Right = new Image();
-        Left.src = '/static/right.png';
+        Right.src = '/static/right.png?t=' + Date.now();
 
         const ScreenShot = new Image();
-        ScreenShot.src = '/static/Screen.png';
+        ScreenShot.src = '/static/Screen.png?t=' + Date.now();
 
         const ChangeColor = new Image();
-        ChangeColor.src = '/static/change_color.png';
+        ChangeColor.src = '/static/change_color.png?t=' + Date.now();
 
         let imagesLoaded = 0;
         const checkImagesLoaded = () => {
