--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -153,6 +153,14 @@
             border: none;
         }
 
+        #prevBtn {
+            background-image: url('/static/left.png');
+        }
+
+        #nextBtn {
+            background-image: url('/static/right.png');
+        }
+
         #prevBtn:hover, #nextBtn:hover {
             background-color: transparent;
         }
