--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -511,9 +511,9 @@
         Double64.src = '/static/Double64.png?t=' + Date.now();
 
         const Left = new Image();
-        Left.src = '/static/left.png?t=' + Date.now();
+        Left.src = '/static/left1.png?t=' + Date.now();
         const Right = new Image();
-        Right.src = '/static/right.png?t=' + Date.now();
+        Right.src = '/static/right2.png?t=' + Date.now();
 
         const ScreenShot = new Image();
         ScreenShot.src = '/static/Screen.png?t=' + Date.now();
