--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -510,10 +510,10 @@
         const Double64 = new Image();
         Double64.src = '/static/Double64.png?t=' + Date.now();
 
-        const Left = new Image();
-        Left.src = '/static/left1.png?t=' + Date.now();
-        const Right = new Image();
-        Right.src = '/static/right2.png?t=' + Date.now();
+        const LeftArrow = new Image();
+        LeftArrow.src = '/static/left1.png?t=' + Date.now();
+        const RightArrow = new Image();
+        RightArrow.src = '/static/right2.png?t=' + Date.now();
 
         const ScreenShot = new Image();
         ScreenShot.src = '/static/Screen.png?t=' + Date.now();
@@ -554,13 +554,13 @@
         Double16.onload = checkImagesLoaded;
         Double32.onload = checkImagesLoaded;
         Double64.onload = checkImagesLoaded;
-        Left.onload = checkImagesLoaded;
-        Right.onload = checkImagesLoaded;
+        LeftArrow.onload = checkImagesLoaded;
+        RightArrow.onload = checkImagesLoaded;
         ScreenShot.onload = checkImagesLoaded;
         ChangeColor.onload = checkImagesLoaded;
 
         // Обработка ошибок загрузки изображений
-        [boardImg, blackImg, whiteImg, Dice1w, Dice2w, Dice3w, Dice4w, Dice5w, Dice6w, Dice1b, Dice2b, Dice3b, Dice4b, Dice5b, Dice6b, Double2, Double4, Double8, Double16, Double32, Double64, Left, Right, ScreenShot, ChangeColor].forEach(img => {
+        [boardImg, blackImg, whiteImg, Dice1w, Dice2w, Dice3w, Dice4w, Dice5w, Dice6w, Dice1b, Dice2b, Dice3b, Dice4b, Dice5b, Dice6b, Double2, Double4, Double8, Double16, Double32, Double64, LeftArrow, RightArrow, ScreenShot, ChangeColor].forEach(img => {
             img.onerror = () => {
                 console.error(`Failed to load image: ${img.src}`);
                 infoDiv.innerHTML = '<div class="error">Error loading game assets. Please try again later.</div>';
