--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -141,6 +141,35 @@
             cursor: not-allowed;
         }
 
+        #prevBtn, #nextBtn {
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+            width: 50px;
+            height: 50px;
+            padding: 0;
+            color: transparent;
+            background-color: transparent;
+            border: none;
+        }
+
+        #prevBtn {
+            background-image: url('/static/left1.png');
+        }
+
+        #nextBtn {
+            background-image: url('/static/righ2.png');
+        }
+
+        #prevBtn:hover, #nextBtn:hover {
+            background-color: transparent;
+        }
+
+        #prevBtn:disabled, #nextBtn:disabled {
+            opacity: 0.5;
+            background-color: transparent;
+        }
+
         #turnLabel {
             font-size: 18px;
             font-weight: bold;
@@ -299,9 +328,9 @@
         <div id="red-pips" class="pips-below-board">0</div>
 
         <div id="controls">
-            <button onclick="prevTurn()" id="prevBtn">←</button>
+            <button onclick="prevTurn()" id="prevBtn"></button>
             <span id="turnLabel">Ход 0</span>
-            <button onclick="nextTurn()" id="nextBtn">→</button>
+            <button onclick="nextTurn()" id="nextBtn"></button>
             <button onclick="toggleInvert()" id="invertBtn">Инверт</button>
             <button onclick="takeScreenshot()" id="screenshotBtn">Скрин</button>
         </div>
@@ -408,7 +437,7 @@
                         if (data[0]?.action === 'skip') {
                             current = 1;
                         }
-                        if (imagesLoaded === 21) {
+                        if (imagesLoaded === 25) {
                             render(current, invertColors);
                             updateButtons();
                             infoDiv.innerHTML = '';
@@ -434,58 +463,69 @@
         const ctx = canvas.getContext('2d');
 
         const boardImg = new Image();
-        boardImg.src = '/static/board.png';
+        boardImg.src = '/static/board.png?t=' + Date.now();
 
         const blackImg = new Image();
-        blackImg.src = '/static/black_checker.png';
+        blackImg.src = '/static/black_checker.png?t=' + Date.now();
 
         const whiteImg = new Image();
-        whiteImg.src = '/static/white_checker.png';
+        whiteImg.src = '/static/white_checker.png?t=' + Date.now();
 
         const Dice1w = new Image();
-        Dice1w.src = '/static/1w.png';
+        Dice1w.src = '/static/1w.png?t=' + Date.now();
         const Dice2w = new Image();
-        Dice2w.src = '/static/2w.png';
+        Dice2w.src = '/static/2w.png?t=' + Date.now();
         const Dice3w = new Image();
-        Dice3w.src = '/static/3w.png';
+        Dice3w.src = '/static/3w.png?t=' + Date.now();
         const Dice4w = new Image();
-        Dice4w.src = '/static/4w.png';
+        Dice4w.src = '/static/4w.png?t=' + Date.now();
         const Dice5w = new Image();
-        Dice5w.src = '/static/5w.png';
+        Dice5w.src = '/static/5w.png?t=' + Date.now();
         const Dice6w = new Image();
-        Dice6w.src = '/static/6w.png';
+        Dice6w.src = '/static/6w.png?t=' + Date.now();
 
         const Dice1b = new Image();
-        Dice1b.src = '/static/1b.png';
+        Dice1b.src = '/static/1b.png?t=' + Date.now();
         const Dice2b = new Image();
-        Dice2b.src = '/static/2b.png';
+        Dice2b.src = '/static/2b.png?t=' + Date.now();
         const Dice3b = new Image();
-        Dice3b.src = '/static/3b.png';
+        Dice3b.src = '/static/3b.png?t=' + Date.now();
         const Dice4b = new Image();
-        Dice4b.src = '/static/4b.png';
+        Dice4b.src = '/static/4b.png?t=' + Date.now();
         const Dice5b = new Image();
-        Dice5b.src = '/static/5b.png';
+        Dice5b.src = '/static/5b.png?t=' + Date.now();
         const Dice6b = new Image();
-        Dice6b.src = '/static/6b.png';
+        Dice6b.src = '/static/6b.png?t=' + Date.now();
 
         const Double2 = new Image();
-        Double2.src = '/static/Double2.png';
+        Double2.src = '/static/Double2.png?t=' + Date.now();
         const Double4 = new Image();
-        Double4.src = '/static/Double4.png';
+        Double4.src = '/static/Double4.png?t=' + Date.now();
         const Double8 = new Image();
-        Double8.src = '/static/Double8.png';
+        Double8.src = '/static/Double8.png?t=' + Date.now();
         const Double16 = new Image();
-        Double16.src = '/static/Double16.png';
+        Double16.src = '/static/Double16.png?t=' + Date.now();
         const Double32 = new Image();
-        Double32.src = '/static/Double32.png';
+        Double32.src = '/static/Double32.png?t=' + Date.now();
         const Double64 = new Image();
-        Double64.src = '/static/Double64.png';
+        Double64.src = '/static/Double64.png?t=' + Date.now();
+
+        const LeftArrow = new Image();
+        LeftArrow.src = '/static/left1.png?t=' + Date.now();
+        const RightArrow = new Image();
+        RightArrow.src = '/static/right2.png?t=' + Date.now();
+
+        const ScreenShot = new Image();
+        ScreenShot.src = '/static/Screen.png?t=' + Date.now();
+
+        const ChangeColor = new Image();
+        ChangeColor.src = '/static/change_color.png?t=' + Date.now();
 
         let imagesLoaded = 0;
         const checkImagesLoaded = () => {
             imagesLoaded++;
             console.log('Images loaded:', imagesLoaded);
-            if (imagesLoaded === 21 && dataLoaded) {
+            if (imagesLoaded === 25 && dataLoaded) {
                 console.log('All images and data loaded, rendering turn', current);
                 render(current, invertColors);
                 updateButtons();
@@ -514,9 +554,13 @@
         Double16.onload = checkImagesLoaded;
         Double32.onload = checkImagesLoaded;
         Double64.onload = checkImagesLoaded;
+        LeftArrow.onload = checkImagesLoaded;
+        RightArrow.onload = checkImagesLoaded;
+        ScreenShot.onload = checkImagesLoaded;
+        ChangeColor.onload = checkImagesLoaded;
 
         // Обработка ошибок загрузки изображений
-        [boardImg, blackImg, whiteImg, Dice1w, Dice2w, Dice3w, Dice4w, Dice5w, Dice6w, Dice1b, Dice2b, Dice3b, Dice4b, Dice5b, Dice6b, Double2, Double4, Double8, Double16, Double32, Double64].forEach(img => {
+        [boardImg, blackImg, whiteImg, Dice1w, Dice2w, Dice3w, Dice4w, Dice5w, Dice6w, Dice1b, Dice2b, Dice3b, Dice4b, Dice5b, Dice6b, Double2, Double4, Double8, Double16, Double32, Double64, LeftArrow, RightArrow, ScreenShot, ChangeColor].forEach(img => {
             img.onerror = () => {
                 console.error(`Failed to load image: ${img.src}`);
                 infoDiv.innerHTML = '<div class="error">Error loading game assets. Please try again later.</div>';
