--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -315,10 +315,10 @@
             const prevBtn = document.getElementById('prevBtn');
             const nextBtn = document.getElementById('nextBtn');
             if (prevBtn) {
-                prevBtn.style.backgroundImage = "url('/static/left1.png?t=" + Date.now() + "')";
+                prevBtn.style.backgroundImage = "url('/static/left.png?t=" + Date.now() + "')";
             }
             if (nextBtn) {
-                nextBtn.style.backgroundImage = "url('/static/right2.png?t=" + Date.now() + "')";
+                nextBtn.style.backgroundImage = "url('/static/right.png?t=" + Date.now() + "')";
             }
         });
     </script>
@@ -516,9 +516,9 @@
         Double64.src = '/static/Double64.png?t=' + Date.now();
 
         const LeftArrow = new Image();
-        LeftArrow.src = '/static/left1.png?t=' + Date.now();
+        LeftArrow.src = '/static/left.png?t=' + Date.now();
         const RightArrow = new Image();
-        RightArrow.src = '/static/right2.png?t=' + Date.now();
+        RightArrow.src = '/static/right.png?t=' + Date.now();
 
         const ScreenShot = new Image();
         ScreenShot.src = '/static/Screen.png?t=' + Date.now();
